--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
 
     <h1>Coucou</h1>
+    <p>on test les branches</p>
+    <h2>on croise les doigts </h2>
+    <p>test test </p>
     
 </body>
 </html>
