Ajout titre et paragraphe dans index.html

--- a/index.html
+++ b/index.html
@@ -3,14 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Exemple de titres</title>
 </head>
-<body>
+    <body>
 
-    <h1>Coucou</h1>
-    <p>on test les branches</p>
-    <h2>on croise les doigts </h2>
-    <p>test test </p>
-    
-</body>
+        <h1>Premier titre</h1>
+            <p>Ce premier titre (h1) est généralement utilisé dans les hauts de page.</p>
+
+        <h2>Introduction</h2>
+            <p>Le titre (h2) et son paragraphe sont utilisés pour introduire des nouvelle sections sur une page</p>
+
+        <h3>Sous-section 1</h3>
+            <p>Le titre (h2) et son paragraphe sont utilisés pour des sous-sections plus spécifique</p>
+
+        <h4>Sous-section 1.1</h4>
+            <p>Le titre (h4) et son paragraphe sont utilisés pour du contenus encore plus précis</p>
+
+        <h5>Informations supplémentaires</h5>
+            <p>Le titre (h5) et son paragraphe sont utilisés pour hiérarchiser le contenu de la page</p>
+
+        <h6>Notes finales</h6>
+            <p>Le titre (h6) et son paragraphe sont utilisés pour le plus bas de la hiérarchie de la page</p>
+
+    </body>
 </html>
