ajout nav bar Profil

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <li><a href="#formulaire">Formulaire</a></li>
                 <li><a href="#liste">Liste</a></li>
                 <li><a href="#Accueil">Accueil</a></li>
+                <li><a href="#Profil">Profil</a></li>
             </ul>
         </nav>
 
